--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -38,7 +38,7 @@
             <div class="sidenav-header  align-items-center">
                 <a class="navbar-brand" href="javascript:void(0)">
                     <a asp-controller="Home" asp-action="Index" type="button">Nithin</a>
-                    @*<img src="~/Argon-assets/img/brand/blue.png" class="navbar-brand-img" alt="...">*@
+                    @* <img src="~/Argon-assets/img/nu_10137095.png" class="navbar-brand-img" alt="..."> *@
                 </a>
             </div>
             <div class="navbar-inner">
@@ -93,11 +93,17 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Admin" asp-action="Index">
-                                    <i class="ni ni-money-coins"></i>
+                                    <i class="ni ni-circle-08"></i>
                                     <span class="nav-link-text">Users Details</span>
                                 </a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-area="" asp-controller="Users" asp-action="SignOut">
+                                <i class=""></i>
+                                <span class="nav-link-text">Sign Out</span>
+                            </a>
+                        </li>
 
                         @* <li class="nav-item">
                         <a class="nav-link">
