--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -81,7 +81,12 @@
                                 </a>
                             </li>
                         }
-
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-area="" asp-controller="Users" asp-action="SignOut">
+                                <i class=""></i>
+                                <span class="nav-link-text">Sign Out</span>
+                            </a>
+                        </li>
                        
                     </ul>
                     
