--- a/Nithin2003/Views/Admin/LoanAmountRequest.cshtml
+++ b/Nithin2003/Views/Admin/LoanAmountRequest.cshtml
@@ -62,12 +62,17 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Admin" asp-action="Index">
-                                    <i class="ni ni-money-coins"></i>
+                                    <i class="ni ni-circle-08"></i>
                                     <span class="nav-link-text">Users Details</span>
                                 </a>
                             </li>
                         }
-                        
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-area="" asp-controller="Users" asp-action="SignOut">
+                                <i class=""></i>
+                                <span class="nav-link-text">Sign Out</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
