--- a/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
@@ -60,6 +60,12 @@
                             </li>
 
                         }
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-area="" asp-controller="Users" asp-action="SignOut">
+                                <i class=""></i>
+                                <span class="nav-link-text">Sign Out</span>
+                            </a>
+                        </li>
 
                         @*<li class="nav-item">
                             <a class="nav-link ">
