--- a/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
@@ -54,7 +54,7 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
-                                    <i class="ni ni-money-coins"></i>
+                                    <i class="ni ni-circle-08"></i>
                                     <span class="nav-link-text">Content Editor</span>
                                 </a>
                             </li>
