--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -76,7 +76,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Admin" asp-action="Index">
-                                    <i class="ni ni-money-coins"></i>
+                                    <i class="ni ni-circle-08"></i>
                                     <span class="nav-link-text">Users Details</span>
                                 </a>
                             </li>
