--- a/Nithin2003/Views/Users/SignIn.cshtml
+++ b/Nithin2003/Views/Users/SignIn.cshtml
@@ -107,8 +107,9 @@
                                     @*<button type="button" class="btn btn-primary my-4">Sign in</button>*@
                                     <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Sign In" />                                    
                                     <a asp-controller="Home" asp-action="Index" class="btn btn-primary my-4" type="button">Back To Home</a>
-                                    <h5 class="text-Black">Don't Have An Account ? Click On Sign Up</h5>
+                                    <h5 class="text-Black">Don't have an account ? Click on sign up</h5>
                                     <a asp-controller="Users" asp-action="AddDetails"  type="button" class="btn btn-primary my-4"> Sign Up</a>
+                                    <h5 class="text-Black"> Forgot Password? Not to worry! Lets get you a password</h5>
                                     <a asp-controller="Users" asp-action="ForgotPassword" type="button" class="btn btn-primary my-4"> Forgot Password</a>
                             </div>
                                 
