--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -36,8 +36,8 @@
         <div class="scrollbar-inner">
             <!-- Brand -->
             <div class="sidenav-header  align-items-center">
-                <a class="navbar-brand" href="javascript:void(0)">
-                    <a asp-controller="Home" asp-action="Index" type="button">Nithin</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
+                    <img style="max-height: 60px;width:200px;" src="~/Argon-assets/img/666.jpeg" class="navbar-brand-img" alt="...">
                     @* <img src="~/Argon-assets/img/nu_10137095.png" class="navbar-brand-img" alt="..."> *@
                 </a>
             </div>
@@ -46,16 +46,17 @@
                 <div class="collapse navbar-collapse" id="sidenav-collapse-main">
                     <!-- Nav items -->
                     <ul class="navbar-nav">
-                        
 
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="DashBoard" asp-action="TransferMoney">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Transfer Money</span>
-                            </a>
-                        </li>
+
+
                         @if (Context.Session.GetString("Admin") != "True")
                         {
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="DashBoard" asp-action="TransferMoney">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Transfer Money</span>
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoanRequest">
                                     <i class="ni ni-money-coins"></i>
@@ -84,7 +85,7 @@
                         }
                         @if (Context.Session.GetString("Admin") == "True")
                         {
-                            
+
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
                                     <i class="ni ni-circle-08"></i>
@@ -97,13 +98,27 @@
                                     <span class="nav-link-text">Users Details</span>
                                 </a>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">Content Editor</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Users Transaction History</span>
+                                </a>
+                            </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="Users" asp-action="SignOut">
+                            <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
                                 <i class=""></i>
                                 <span class="nav-link-text">Sign Out</span>
                             </a>
                         </li>
+
 
                         @* <li class="nav-item">
                         <a class="nav-link">
