--- a/Nithin2003/Views/Home/ContactUs.cshtml
+++ b/Nithin2003/Views/Home/ContactUs.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model ContactFormModel
+﻿@model ContactFormModel
 @{
     ViewData["Title"] = "ContactUs";
     Layout = "~/Views/Shared/_Form.cshtml";
@@ -49,7 +48,7 @@
                             <div class="text-center text-muted mb-4">
                                 <small> Contact Us</small>
                             </div>
-                            <form action="/Home/ContactUs" method="post" >
+                            <form action="/Home/ContactUs" method="post">
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <div class="input-group-prepend">
@@ -66,7 +65,7 @@
                                             <span class="input-group-text"><i class="ni ni-chat-round"></i></span>
                                         </div>
                                         <input class="form-control" asp-for="@Model.Subject" placeholder="Subject" type="text">
-                                       @* <span asp-validation-for="@Model.Password" class="text-danger"></span>*@
+                                        @* <span asp-validation-for="@Model.Password" class="text-danger"></span>*@
 
                                     </div>
                                 </div>
@@ -80,7 +79,7 @@
 
                                     </div>
                                 </div>
-                                
+
                                 <div class="form-group">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <div class="input-group-prepend">
@@ -88,7 +87,7 @@
                                         </div>
                                         <input class="form-control" asp-for="@Model.Mobile" placeholder="Enter Mobile Number" type="number">
                                         <span asp-validation-for="@Model.Mobile" class="text-danger"></span>
-                                        
+
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -96,13 +95,13 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="ni ni-chat-round"></i></span>
                                         </div>
-                                        
-                                        
+
+
                                         <input type="text" class="form-control" placeholder="Body" name="Body" />
 
                                     </div>
                                 </div>
-                               
+
                                 @*<div class="custom-control custom-control-alternative custom-checkbox">
                                 <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
                                 <label class="custom-control-label" for=" customCheckLogin">
@@ -113,14 +112,16 @@
                                     @*<button type="button" class="btn btn-primary my-4">Sign in</button>*@
                                     <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Send" />
                                     <a asp-controller="Home" asp-action="Index" class="btn btn-primary my-4" type="button">Back To Home</a>
-                                    @*<h5 class="text-Black">Don't Have An Account ? Click On Sign Up</h5>
-                                    <a asp-controller="Users" asp-action="AddDetails" type="button" class="btn btn-primary my-4"> Sign Up</a>*@
+                                    @if(Context.Session.GetString("SignIn") != "True")
+                                    {
+                                        <h5 class="text-Black">Already registered! Use below link to sign in</h5>
+                                        <a asp-controller="Users" asp-action="SignIn" class="btn btn-primary my-4" type="button"> Sign In</a>
+                                    }
                                 </div>
-                                
-                            </form>
-                            
+
+                            </form>                           
                         </div>
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </div>
