--- a/Nithin2003/Views/Shared/_DashBoard.cshtml
+++ b/Nithin2003/Views/Shared/_DashBoard.cshtml
@@ -86,13 +86,22 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
-                                    <i class="ni ni-money-coins"></i>
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">Content Editor</span>
+                                </a>
+                            </li>
+                        }
+                        @if (Context.Session.GetString("Admin") == "True")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
+                                    <i class="ni ni-circle-08"></i>
                                     <span class="nav-link-text">Content Editor</span>
                                 </a>
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="Users" asp-action="SignOut">
+                            <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
                                 <i class=""></i>
                                 <span class="nav-link-text">Sign Out</span>
                             </a>
@@ -201,7 +210,7 @@
                             <i class="ni ni-zoom-split-in"></i>
                         </a>
                     </li>
-                    <li class="nav-item dropdown">
+                   @*  <li class="nav-item dropdown">
                         <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="ni ni-bell-55"></i>
                         </a>
@@ -311,8 +320,8 @@
                             <!-- View all -->
                             <a href="#!" class="dropdown-item text-center text-primary font-weight-bold py-3">View all</a>
                         </div>
-                    </li>
-                    <li class="nav-item dropdown">
+                    </li> *@
+                    @* <li class="nav-item dropdown">
                         <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="ni ni-ungroup"></i>
                         </a>
@@ -356,24 +365,24 @@
                                 </a>
                             </div>
                         </div>
-                    </li>
+                    </li> *@
                 </ul>
                 <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
                     <li class="nav-item dropdown">
                         <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="media align-items-center">
-                                <span class="avatar avatar-sm rounded-circle">
-                                    <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-4.jpg">
-                                </span>
+                            <div  class="media align-items-center">
+                                <a style="color:white" class="nav-link scrollto" asp-controller="Dashboard" asp-action="Index">@Context.Session.GetString("Username")</a>
+                                   @*  <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-4.jpg"> *@
+                                
                                 @*<div class="media-body  ml-2  d-none d-lg-block">
                                 <span class="mb-0 text-sm  font-weight-bold">John Snow</span>
                                 </div>*@
 
-                                <div class="media-body  ml-2  d-none d-lg-block">
+                               @*  <div class="media-body  ml-2  d-none d-lg-block">
 
                                     <a style="background-color:white;border-radius: 10px;" class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="SignOut">Sign Out</a>
 
-                                </div>
+                                </div> *@
                             </div>
                         </a>
                         <div class="dropdown-menu  dropdown-menu-right ">
