--- a/Nithin2003/Views/Shared/_Form.cshtml
+++ b/Nithin2003/Views/Shared/_Form.cshtml
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-6 collapse-brand">
                             <a href="dashboard.html">
-                                <img src="~/argon-assets/img/brand/blue.png">
+                                @* <img src="~/argon-assets/img/brand/blue.png"> *@
                             </a>
                         </div>
                         <div class="col-6 collapse-close">
