--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -72,7 +72,19 @@
                                     <span class="nav-link-text">Track Loan Status</span>
                                 </a>
                             </li>
+                           
                         }
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Dashboard" asp-action="MyLoginDetails">
+                                <i class="ni ni-circle-08"></i>
+                                <span class="nav-link-text">My LogIn History</span>
+                            </a>
+                        <li class="nav-item">
+                            <a class="nav-link active" asp-controller="Dashboard" asp-action="MytransactionHistory">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">My Transaction History</span>
+                            </a>
+                        </li>
                         @if (Context.Session.GetString("ContentEditor") == "True")
                         {
                             <li class="nav-item">
