--- a/Nithin2003/Views/Users/UsersContentEditor.cshtml
+++ b/Nithin2003/Views/Users/UsersContentEditor.cshtml
@@ -54,22 +54,7 @@
                                     <span class="nav-link-text">Content Editor</span>
                                 </a>
                             </li>
-                        }
-                        @if (Context.Session.GetString("Admin") == "True")
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
-                                    <i class="ni ni-circle-08"></i>
-                                    <span class="nav-link-text">Content Editor</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" asp-controller="Admin" asp-action="UserstransactionHistory">
-                                    <i class="ni ni-money-coins"></i>
-                                    <span class="nav-link-text">Users Transaction History</span>
-                                </a>
-                            </li>
-                        }
+                        }                        
                         <li class="nav-item">
                             <a style="background-color:#5e72e4;color:white" class="nav-link " asp-area="" asp-controller="Users" asp-action="SignOut">
                                 <i class=""></i>
@@ -199,7 +184,7 @@
                                         </div>
                                         </div>*@
 
-                                            @if (Context.Session.GetString("ContentEditor") == "True" || Context.Session.GetString("Admin") == "True")
+                                            @if (Context.Session.GetString("ContentEditor") == "True")
                                             {
 
                                                 <td><div class="btn"> <a asp-controller="Users" asp-action="EditDetails" style="color:darkolivegreen" asp-route-Username="@users.Username">Edit</a></div></td>
