--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -37,7 +37,7 @@
             <!-- Brand -->
             <div class="sidenav-header  align-items-center">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index" type="button">
-                    <img style="max-height: 60px;width:200px;" src="~/Argon-assets/img/666.jpeg" class="navbar-brand-img" alt="...">
+                    <img style="max-height:60px;width:200px;" src="~/Argon-assets/img/Screenshot 2024-11-03 214613.png" class="navbar-brand-img" alt="...">
                     @* <img src="~/Argon-assets/img/nu_10137095.png" class="navbar-brand-img" alt="..."> *@
                 </a>
             </div>
@@ -213,7 +213,7 @@
                         <i class="ni ni-send text-dark"></i>
                         <span class="nav-link-text">Upgrade to PRO</span>
                         </a>
-                        </li>
+                        </li>*@
                         </ul>
                 </div>
             </div>
